--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^0.14.8",
     "react-addons-css-transition-group": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-modal": "^1.5.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.0.1",
     "redux": "^3.6.0",
