--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-modal": "^1.5.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
   },
