--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
+    "redux-auth-wrapper": "^0.8.0",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
@@ -56,6 +57,9 @@
     "http-server": "^0.9.0",
     "postcss": "^5.2.5",
     "postcss-loader": "^1.0.0",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.1.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
